fix botsl #8 video but on mobile safari

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -443,7 +443,7 @@ iframe {
 	.pad {
 		/*padding: 0px;*/
 	}
-	.hidden {
+	#video.hidden {
 		display: none;
 	}
 }	
